Fix Some Exception ANd Import and Excel Service not autosizeColumn